@@ -1,3 +1,15 @@
+2017-05-05  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Leaks always reports "WebKit Malloc Memory Pressure Handler" dispatch_queue/source as leaking
+        https://bugs.webkit.org/show_bug.cgi?id=171532
+
+        Reviewed by Geoffrey Garen.
+
+        * bmalloc/Heap.cpp:
+        (bmalloc::Heap::Heap):
+        * bmalloc/Heap.h:
+        Store the dispatch_source_t in a member to avoid a false positive leak.
+
 2017-04-27  Michael Saboff  <msaboff@apple.com>
 
         bmalloc scavenger should know what page classes are allocating
